Fix spacing and use sample data

--- a/components/Frontend/HeroBranding/styles.scss
+++ b/components/Frontend/HeroBranding/styles.scss
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 1rem 0 5rem 0;
+  padding: 70px 0 5rem 0;
   min-height: 100vh;
 
   background-size: cover;
@@ -25,7 +25,7 @@
   .content-container,
   .media-container {
     position: relative;
-    padding: 1rem;
+    padding: 2.5rem;
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -39,17 +39,12 @@
     margin: 0 auto;
     color: white;
     .title {
-      padding: 1rem;
-      .pre-title {
-        font-size: 1.2rem;
-        font-weight: 400;
-        margin-bottom: 0.5rem;
-      }
-
       .main-title {
-        font-size: 2.5rem;
-        line-height: 2rem;
-        text-transform: uppercase;
+        padding: 1rem 0;
+        font-size: 3.125rem;
+        line-height: 3rem;
+        font-weight: 300;
+        letter-spacing: -2px;
       }
     }
     .content {
@@ -58,13 +53,21 @@
     }
 
     .cta-button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       border-color: white;
-      padding: 1rem 8rem;
+      padding: 1rem;
       border-radius: 0;
       color: white;
       text-transform: uppercase;
-      font-weight: 300;
+      font-weight: 600;
       margin-top: 1rem;
+      white-space: nowrap;
+
+      span {
+        margin-right: 1rem;
+      }
     }
   }
 
